syntax = "proto3";

package kvstore;

service KeyValueStore {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Put(PutRequest) returns (PutResponse) {}
}

// You'll likely need to define more specific return codes than these!
enum ReturnCode {
    SUCCESS = 0;
    FAILURE = 1;
    // PUT return code
    FAILURE_DEMOTED = 2;
    FAILURE_EXPIRED = 3;
    SUCCESS_SEQNO = 4;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    ReturnCode ret = 2;
    string leaderHint = 3;
}

message PutRequest {
    string key = 1;
    string value = 2;
    int32 from = 3;
    string clientId = 4;
    int32 seqNo = 5;
}

message PutResponse {
    ReturnCode ret = 1;
    string leaderHint = 2;
}

